# SKNanoAnalyzer

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  ChargedHiggsAnalysisV3  README.md  SKFlatAnalyzer  SKNanoOutput  doThis.sh  setup.sh  submit.sh  test.py
.github/workflows/: main.yml
AnalyzerTools/: CMakeLists.txt  DiLeptonSystematic.yaml  Makefile  VcbSystematic.yaml  VcbSystematic_BTag.yaml  cmake_install.cmake  module.modulemap
AnalyzerTools/include/: AnalyzerParameter.h  AnalyzerToolsLinkDef.hpp  Correction.h  ExampleParameter.h  LHAPDFHandler.h  MCCorrection.h  MLHelper.h  MLHelperLinkDef.hpp  MyCorrection.h  NonpromptParameter.h  PDFReweight.h  PhysicalConstants.h  SystematicHelper.h
AnalyzerTools/src/: AnalyzerParameter.cc  Correction.cc  ExampleParameter.cc  LHAPDFHandler.cc  MCCorrection.cc  MLHelper.cc  MyCorrection.cc  PDFReweight.cc  SystematicHepler.cc
Analyzers/: CMakeLists.txt  Makefile  cmake_install.cmake  module.modulemap
Analyzers/include/: AnalyzerCore.h  AnalyzersLinkDef.h  AnalyzersLinkDef.hpp  DiLepton.h  DiLeptonBase.h  ExampleRun.h  FullHadronicTriggerTnP.h  GeneratorBase.h  GeneratorStudy.h  GetEffLumi.h  MeasTrigEff.h  MeasureJetTaggingEff.h  MeasureJetTaggingR.h  MuonTnPProducer.h  ParseEleIDVariables.h  ParseMuIDVariables.h  SKNanoLoader.h  TestAnalyzer.h  TestAnalyzer2.h  TestGetLeptonType.h  Vcb.h  VcbParameters.h  Vcb_DL.h  Vcb_FH.h  Vcb_SL.h
Analyzers/src/: AnalyzerCore.cc  DiLepton.cc  DiLeptonBase.cc  ExampleRun.cc  FullHadronicTriggerTnP.cc  GeneratorBase.cc  GeneratorStudy.cc  GetEffLumi.cc  MeasTrigEff.cc  MeasureJetTaggingEff.cc  MeasureJetTaggingR.cc  MuonTnPProducer.cc  ParseEleIDVariables.cc  ParseMuIDVariables.cc  SKNanoLoader.cc  TestAnalyzer.cc  TestAnalyzer2.cc  TestGetLeptonType.cc  Vcb.cc  Vcb_DL.cc  Vcb_FH.cc  Vcb_SL.cc
DataFormats/: CMakeLists.txt  Makefile  cmake_install.cmake  module.modulemap
DataFormats/include/: .Event.h.swp  DataFormatsLinkDef.h  DataFormatsLinkDef.hpp  Electron.h  Event.h  FatJet.h  Gen.h  GenDressedLepton.h  GenIsolatedPhoton.h  GenJet.h  GenVisTau.h  Jet.h  JetTaggingParameter.h  JetTaggingParameters.h~  LHE.h  Lepton.h  Muon.h  Particle.h  Photon.h  Tau.h  TrigObj.h
DataFormats/src/: Electron.cc  Event.cc  FatJet.cc  Gen.cc  GenDressedLepton.cc  GenIsolatedPhoton.cc  GenJet.cc  GenVisTau.cc  Jet.cc  JetTaggingParameter.cc  LHE.cc  Lepton.cc  Muon.cc  Particle.cc  Photon.cc  Tau.cc  TrigObj.cc
PyAnalyzers/: DiLepton.py  DrellYanValidation.py  hist.root
SampleLists/Run2NanoV9/: DiLepton.txt  EveryAlias_RunII.txt  ExampleRun.txt  SignalSamples.txt
SampleLists/Run2NanoV9/SampleDefHcToWA/: DATA_2016postVFP.txt  DATA_2016preVFP.txt  DATA_2017.txt  DATA_2018.txt  MC_2016postVFP.txt  MC_2016preVFP.txt  MC_2017.txt  MC_2018.txt
SampleLists/Run3NanoV12/: EveryAliasMC.txt  ExampleRun.txt
SampleLists/Run3NanoV13/: DiLepton.txt  EveryAliasMC.txt
config/: config.default  config.root
data/Run3UltraLegacy_v1/: MakeTaggingEffJson.py  NanoAODv12_HLT_Path.txt  sampleManager.py
data/Run3UltraLegacy_v1/2022/BTV/: btaggingEff.json  ctaggingEff.json
data/Run3UltraLegacy_v1/2022/Sample/: CommonSampleInfo.json
data/Run3UltraLegacy_v1/2022/Trigger/: NanoAODv12_HLT_Path.json
data/Run3UltraLegacy_v1/2022EE/BTV/: btaggingEff.json  ctaggingEff.json
data/Run3UltraLegacy_v1/2022EE/Sample/: CommonSampleInfo.json
data/Run3_v12_Run2_v9/: MakeTaggingEffJson.py  MakeTaggingRJson.py  NanoAODv12_Active.json  NanoAODv9_Active.json  fix.patch  output.json  output.root  output_looseveto.root  res.txt  txtTojson.py
data/Run3_v12_Run2_v9/2016postVFP/BTV/: ctaggingR.json
data/Run3_v12_Run2_v9/2016postVFP/Sample/: CommonSampleInfo.json
data/Run3_v12_Run2_v9/2016postVFP/Trigger/: HLT_Path.json
data/Run3_v12_Run2_v9/2016preVFP/MUO/: muon_trig.json
data/Run3_v12_Run2_v9/2016preVFP/Sample/: CommonSampleInfo.json
data/Run3_v12_Run2_v9/2016preVFP/Trigger/: HLT_Path.json
data/Run3_v12_Run2_v9/2017/MUO/: efficiency_Mu17Leg1.json  muon_trig.json
data/Run3_v12_Run2_v9/2017/Sample/: CommonSampleInfo.json
data/Run3_v12_Run2_v9/2017/Trigger/: HLT_Path.json
data/Run3_v12_Run2_v9/2018/BTV/: btaggingR.json
data/Run3_v12_Run2_v9/2018/Sample/: CommonSampleInfo.json
data/Run3_v12_Run2_v9/2018/Trigger/: HLT_Path.json
data/Run3_v12_Run2_v9/2022/Sample/: CommonSampleInfo.json
data/Run3_v12_Run2_v9/2022/Trigger/: HLT_Path.json
data/Run3_v12_Run2_v9/2022EE/BTV/: Vcb_FH_btaggingR.json  Vcb_FH_ctaggingR.json  btaggingEff.json  ctaggingEff.json
data/Run3_v12_Run2_v9/2022EE/Sample/: CommonSampleInfo.json
data/Run3_v12_Run2_v9/2022EE/Trigger/: HLT_Path.json
data/Run3_v12_Run2_v9/2023/Sample/: CommonSampleInfo.json
data/Run3_v12_Run2_v9/2023/Trigger/: HLT_Path.json
data/Run3_v12_Run2_v9/2023BPix/Sample/: CommonSampleInfo.json
data/Run3_v12_Run2_v9/2023BPix/Trigger/: HLT_Path.json
data/Run3_v13_Run2_v9/2016postVFP/EGM/: efficiency_Mu8El23_El23Leg.json  efficiency_TopHNT.json
data/Run3_v13_Run2_v9/2016postVFP/MUO/: efficiency_Mu23El12_Mu23Leg.json  efficiency_Mu8El23_Mu8Leg.json  (+2 more)
data/Run3_v15_Run2_v15/: MakeCodeBlockFromJson.ipynb  NanoAODv15.json  doc_TTH-Hto2G_Par-M-125_TuneCP5_13p6TeV_amcatnloFXFX-pythia8_RunIII2024Summer24NanoAODv15-150X_mcRun3_2024_realistic_v2-v2.html
docs/: DevelopementGuide.md  DevelopmentGuide.md  ExampleSystematic.yaml  GettingStarted.md  Nano.yml  noSyst.yaml
docs/Objects/: Electron.md  Jet.md  MET.md  Muon.md
python/: JobReporter.py  SKFlat.py  SKNano.py  SKNano.py.bak  branchHtmltoJson.py  compareBranches.py  data.json  ddd.sh  fileSplitter.py  plotter.py  sampleManager.py
scripts/: MakeSamplePathInfo.py  build.sh  clealAll.sh  clean_build.sh  convertRootToJson.py  install_lhapdf.sh  install_libtorch.sh  makeMuonEffJson.py  makeSamplePathInfo.py  makeTaggingRJson.py  parseEffLumi.py  rebuild.sh  test.json  test.py
scripts/submission/: DiLepton.sh  MeasTrigEff.sh
templates/: CMakeLists.txt  Nano.yml  RoccoR_LinkDef.hpp  final.sh  hadd.sh  job.cc  job.py  job_dict.py  run.python.sh  run.sh
templates/RoccoR/: CMakeLists.txt  RoccoR_LinkDef.hpp
(+2380 files in other folders)
